fix: container-main padding on small screens, added build CI, changes to README

--- a/scss/pages/all.scss
+++ b/scss/pages/all.scss
@@ -32,8 +32,7 @@
   display: flex;
   justify-content: center;
 
-  padding-left: 232px;
-
+  padding-left: 0;
 
   .content {
     width: 100%;
